--- a/views/layout/footer-card.twig
+++ b/views/layout/footer-card.twig
@@ -1,5 +1,5 @@
 <footer>
-	<div class="footer">
+	<div class="footer-card">
 
 		<div>
 			<img class="img-bouteille" src="../images/logo/bouteille.png" width="50px">
