--- a/views/layout/header-card.twig
+++ b/views/layout/header-card.twig
@@ -1,10 +1,14 @@
-<header>
-	<nav class="navbar navbar-light bg-light">
+{% block stylesheet %}
+	<link rel="stylesheet" href="./css/cardplante.css">
 
-		<strong>
-			<a class="navbar-brand d-flex" style="color:#005C53" href="#">Click sur le calendrier d'arrosage pour programmer l'alerte
+{% endblock %}
+<header class="header-card">
+	<nav class="header-calendar bg-light">
+		<div>
+			<a id="header-card-title" class="container-fluid text-align-center" style="color:#005C53" href="#">Click sur le calendrier d'arrosage pour programmer l'alerte
 			</a>
-		</strong>
+		</div>
 
 	</nav>
 </header>
+
