--- a/views/layout/header.twig
+++ b/views/layout/header.twig
@@ -15,11 +15,10 @@
 						<a class="dropdown-item {% if action == " connexion" %} active {% endif %}" href="/connexion">Connexion</a>
 					</li>
 					<li>
-						<a class="dropdown-item {% if action == " blog" %} active {% endif %} " href="/blog">Blog</a>
+						<a class="dropdown-item {% if action == "directory" %} active {% endif %}" href="/directory">Répertoire</a>
 					</li>
-					<li><hr class="dropdown-divider"></li>
 					<li>
-						<a class="dropdown-item {% if action == " deletone" %} active {% endif %} " href="/deletOne">Déconnexion</a>
+						<a class="dropdown-item {% if action == " deletone" %} active {% endif %} " href="/logout">Déconnexion</a>
 					</li>
 				</ul>
 			</li>
