--- a/assets/css/connect.css
+++ b/assets/css/connect.css
@@ -1,39 +1,44 @@
 .navbar-brand{
     font-size: xx-large;
 }
-
-body{
- background-image: url(../images/fond/accueil.jpg);
- background-repeat: no-repeat;
- background-size: cover;
-
-
+form {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
+
 .titre{
     margin-top: 230px;
-   background-color: #D1D1BA;
+    background-color: #D1D1BA;
     font-size: large;
     border: 2px solid black;
-    border-radius: 10px 10px 0px 0px;
-    margin-left: 350px;
-    margin-right: 350px;
+    border-radius: 0px 10px 0px 10px;
+    width: 250px;
+    
+  
 }
 h1{
+    display: block;
     padding: 10px;
     background-color: #aba463;
-    margin: 150px 50px 0px 150px;
-    margin-top: 150px !important;
-    border-radius: 10px 10px 0px 0px;
+    margin-top: 100px !important;
+    margin-bottom: 0px;
+    width: 40%;
+    margin: auto;
+
 }
 .connect{
     border: 2px solid #005C53;
     border-radius: 0px 0px 10px 10px;
     background-color: #005C53;
-    margin: 0px 0px 30px 150px;
+    width: 40%;
+    margin: auto;
+    margin-bottom: 40px;
+    
 } 
 
 input{
-    border-radius: 0px 10px 0px 10px;
+
     background-color: #D1D1BA;
   
 }
