--- a/assets/css/directory.css
+++ b/assets/css/directory.css
@@ -1,41 +1,70 @@
-.navbar-brand{
+.navbar-brand {
     font-size: xx-large;
+
 }
-.img-fond{
+
+.img-fond {
     background-image: url(../images/fond/database.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
- .card-int{
-background-color:  #9FAF94;
+.card-int {
+    background-color: #9FAF94;
+    flex-direction: column;
 
- }   
+}
 
- .card-ext{
+.body-card:hover {
+    border: 2px solid #005C53;
+}
+
+.body-card a {
+    color:black
+}
+
+.card-ext {
     background-color: #D1D1BA;
- }
 
+}
 
 .fond-interior {
-    background-color:#D1D1BA;
+    background-color: #D1D1BA;
     margin-top: 20px;
-    
+
 }
-.fond-exterior{
+
+.fond-exterior {
     background-color: #9FAF94;
     margin-top: 20px
 }
+
+.imgCard {
+    width: 100px;
+    height: 100px;
+
+}
+
+.card-body {
+    width: 100%;
+    border-radius: 10%;
+}
+
+.listePlante {
+    margin: auto;
+    justify-content: center;
+}
+.button{
+    border-radius: 0px 10px 0px 10px;
+    background-color: #9FAF94;
+    color: red;
+}
+.error{
+    color:red;
+    font-weight:bold;
+    margin-top: 20px;
+    font-size: x-large;
+    font-style: italic;
+    text-align: center;
     
-    .imgCard{
-        width: 100px;
-        height: 100px;
-   
-    }
-    .card-body{
-       width: 400px;  
-        border-radius: 10%; 
-    }
-    .mr{
-        margin-right: 3px;
-    }
-    
-        
+}
