--- a/views/layout/footer.twig
+++ b/views/layout/footer.twig
@@ -1,17 +1,10 @@
 <footer>
-	<div class="footer">
-			<span class="copyright">
-				Cess & Adri Ri7 2022</span>
-			<div class="">
-				<a href="http://www.hotmail.com/?mkt=fr-fr">
-					<img class="img logo-mail p-1" src="..\images\logo\mail.png" width="50px">
-				</a>
-				<a href="https://www.facebook.com/Fwpro01">
-					<img class="img logo-facebook p-1 mx-3" src="..\images\logo\facebook.png" width="50px">
-				</a>
-				<a href="https://www.instagram.com">
-					<img class="img logo-insta p-1" src="..\images\logo\insta.png" width="50px">
-				</a>
-			</div>
+	
+		
+		<div class="logo-img">
+		<a href="/calendar"><img class="img logo-alarme" src="..\images\logo\alarme.png" width="50px"></a>
+		<a href="/collectible"><img class="img logo-collection" src="..\images\logo\collection.png" width="50px"></a>
+		<a href="/directory"><img class="img logo-repertoire" src="..\images\logo\repertoire.png" width="50px"></a>
 	</div>
+	
 </footer>
