--- a/views/pages/connexion.twig
+++ b/views/pages/connexion.twig
@@ -6,10 +6,7 @@
 {% endblock %}
 
 {% block main %}
-
-
-
-	<section style="text-align:center" class=" row col-lg-9 col-md-auto" >
+	<section style="text-align:center" class="" >
 		<h1 >Connexion</h1>
 		<form method="post" action="/connexion" class = "connect">
 			
@@ -27,7 +24,7 @@
 				</div>
 				<br>
 				<div>
-					<input type="text" id="password" name="password">
+					<input type="password" id="password" name="password">
 				</div>
 				<br>
 				<div>
