--- a/views/pages/directory.twig
+++ b/views/pages/directory.twig
@@ -4,81 +4,111 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/connect.css">
 	<link rel="stylesheet" href="css/directory.css">
+	<link rel="stylesheet" href="./css/cardplante.css">
+
 {% endblock %}
 
 {% block main %}
 	<section class="img-fond container-fluid">
-		<article class="row ">
-			<div class="mr row mt-3 mb-3 col-lg-4 offset-lg-4 col-md-3 offset-md-3 col-1">
+		<article class="listePlante row d-flex">
+			<article class="row col-lg-4 col-12">
+				{% if plant %}
+					{% include "./cardPlante.twig" %}
+				{% else %}
+					<div class="error">{{error}}</div>
+				{% endif %}
+
+			</article>
+			<div class="mx-auto row mt-3 mb-3 col-lg-4  col-12">
 				{% for interiorCard in interiorPlants %}
 					<article class="card-int col-12">
-						<div class="mb-3 my-3 fond-interior card">
-							<div class="card-body row">
-								<div class="col-3 my-auto">
-									<img src="../images/plantes/{{interiorCard.image}}" alt="" class="imgCard">
-								</div>
-								<div class="col-9">
-								<ul class="my-auto">
-									<li class="card-text">
-										Famille:
-										{{interiorCard.family}}
-									</li>
-									<li class="card-text ">
-										Nom plante:
-										{{interiorCard.name}}
-									</li>
-									<li class="card-text ">
-										Arrosage:
-										{{interiorCard.watering}}
-									</li>
-									<li class="card-text ">
-										Exposition:
-										{{interiorCard.exposure}}
-									</li>
-									<li class="card-text ">
-										Rampotage:
-										{{interiorCard.repotting}}
-									</li>
-									</ul>
-								</div>
+						<div class="mb-3 my-3 fond-interior body-card card">
+							<div class="card-body  row">
+								<a href="/directory?planter={{interiorCard.name}}" class="d-flex">
+									<div class="col-md-3 my-auto">
+										<img class="img-responsive" src="../images/plantes/{{interiorCard.image}}" style="width:100%" alt="" class="imgCard">
+										{% if user %}
+											<div class="mt-3">
+												<a href="/addPlantToCollection/{{interiorCard.id}}">
+													<button type="submit">Ajouter</button>
+												</a>
+											</div>
+										{% endif %}
+									</div>
+									<div class="col-9">
+										<ul class="my-auto">
+											<li class="card-text">
+												Famille:
+												{{interiorCard.family}}
+											</li>
+											<li class="card-text ">
+												Nom plante:
+												{{interiorCard.name}}
+											</li>
+											<li class="card-text ">
+												Arrosage:
+												{{interiorCard.watering}}
+											</li>
+											<li class="card-text ">
+												Exposition:
+												{{interiorCard.exposure}}
+											</li>
+											<li class="card-text ">
+												Rampotage:
+												{{interiorCard.repotting}}
+											</li>
+										</ul>
+									</div>
+								</a>
+
 							</div>
 						</div>
 					</article>
 				{% endfor %}
 			</div>
-			<div class="row mt-3 mb-3 col-lg-4 col-md-3 col-1">
+			<div class="row mt-3 mb-3 col-lg-4 col-12 ">
 				{% for exteriorCard in exteriorPlants %}
 					<article class="card-ext col-12">
-						<div class="mr mb-3 my-3 fond-exterior card">
+						<div class="mb-3 my-3 fond-exterior body-card card">
 							<div class="card-body row">
-								<div class="col-3 my-auto">
-									<img src="../images/plantes/{{exteriorCard.image}}" alt="" class="imgCard">
+								<a href="/directory?planter={{exteriorCard.name}}" class="d-flex">
+									<div class="col-md-3 my-auto">
+										<img class="img-responsive" src="../images/plantes/{{exteriorCard.image}}" style="width:100%" alt="" class="imgCard">
+										{% if user %}
+											<div class="mt-3">
+												<a href="/addPlantToCollection/{{exteriorCard.id}}">
+													<button type="submit">Ajouter</button>
+												</a>
+											</div>
+										{% endif %}
+
+									</div>
+									<div class="col-9">
+										<ul class="my-auto">
+											<li class="card-text">
+												Famille:
+												{{exteriorCard.family}}
+											</li>
+											<li class="card-text ">
+												Nom plante:
+												{{exteriorCard.name}}
+											</li>
+											<li class="card-text ">
+												Arrosage:
+												{{exteriorCard.watering}}
+											</li>
+											<li class="card-text ">
+												Exposition:
+												{{exteriorCard.exposure}}
+											</li>
+											<li class="card-text ">
+												Rampotage:
+												{{exteriorCard.repotting}}
+											</li>
+										</ul>
+									</div>
 								</div>
-								<div class="col-9">
-								<ul class= "my-auto">
-									<li class="card-text">
-										Famille:
-										{{exteriorCard.family}}
-									</li>
-									<li class="card-text ">
-										Nom plante:
-										{{exteriorCard.name}}
-									</li>
-									<li class="card-text ">
-										Arrosage:
-										{{exteriorCard.watering}}
-									</li>
-									<li class="card-text ">
-										Exposition:
-										{{exteriorCard.exposure}}
-									</li>
-									<li class="card-text ">
-										Rampotage:
-										{{exteriorCard.repotting}}
-									</li>
-									</ul>
-								</div>
-							</div>
+							</a>
 						</div>
 					</article>
 				{% endfor %}
