--- a/views/pages/subscribe.twig
+++ b/views/pages/subscribe.twig
@@ -9,7 +9,7 @@
 
 
 
-	<section style="text-align:center" class=" row col-lg-9 col-md-auto" >
+	<section style="text-align:center" class="" >
 		<h1 >Inscription</h1>
 		<form method="post" action="/subscribe" class = "connect">
 			
@@ -35,7 +35,7 @@
 				</div>
 				<br>
 				<div>
-					<input type="text" id="password" name="password">
+					<input type="password" id="password" name="password">
 				</div>
 				<br>
 				<div>
