--- a/views/layout/header.twig
+++ b/views/layout/header.twig
@@ -8,18 +8,23 @@
 			<li class="nav-item dropstart">
 				<a class="nav-link dropdown-toggle dropstart" style="color:#005C53" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Menu</a>
 				<ul class="dropdown-menu">
+					{% if not user %}
+						<li>
+							<a class="dropdown-item {% if action == " subscribe" %} active {% endif %}" href="/subscribe">Inscription</a>
+						</li>
+						<li>
+							<a class="dropdown-item {% if action == " connexion" %} active {% endif %}" href="/connexion">Connexion</a>
+						</li>
+					{% endif %}
 					<li>
-						<a class="dropdown-item {% if action == " subscribe" %} active {% endif %}" href="/subscribe">Inscription</a>
+						<a class="dropdown-item {% if action == " directory" %} active {% endif %}" href="/directory">Répertoire</a>
 					</li>
-					<li>
-						<a class="dropdown-item {% if action == " connexion" %} active {% endif %}" href="/connexion">Connexion</a>
-					</li>
-					<li>
-						<a class="dropdown-item {% if action == "directory" %} active {% endif %}" href="/directory">Répertoire</a>
-					</li>
-					<li>
-						<a class="dropdown-item {% if action == " deletone" %} active {% endif %} " href="/logout">Déconnexion</a>
-					</li>
+					{% if user %}
+						<li>
+							<a class="dropdown-item {% if action == " deletone" %} active {% endif %} " href="/logout">Déconnexion</a>
+						</li>
+					{% endif %}
+
 				</ul>
 			</li>
 		</ul>
