--- a/views/main.twig
+++ b/views/main.twig
@@ -8,6 +8,9 @@
 		{% block stylesheet %}
 		<link rel="stylesheet" href="./css/style.css">
 		{% endblock %}
+		{% block scriptHead %}
+		
+		{% endblock %}
 		<title>HAPPY PLANTERS</title>
 	</head>
 	<body>
