--- a/views/layout/header-card.twig
+++ b/views/layout/header-card.twig
@@ -1,5 +1,5 @@
 {% block stylesheet %}
-	<link rel="stylesheet" href="./css/cardplante.css">
+	<link rel="stylesheet" href="/css/cardplante.css">
 
 {% endblock %}
 <header class="header-card">
